# uproject

./: .gitignore  Dockerfile  build.sh  images.pptx
doc/: doc.aux  doc.bbl  doc.blg  doc.tex  sigproc.bib
dockers/uber_project/: Dockerfile
dockers/uber_setup/: Dockerfile
kdtree/: CMakeLists.txt  README  README.md  main.cpp
kdtree/lib/eigen3/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  UmfPackSupport
kdtree/lib/eigen3/Eigen/src/OrderingMethods/: Amd.h
kdtree/lib/eigen3/Eigen/src/SparseCholesky/: SimplicialCholesky_impl.h
kdtree/lib/eigen3/unsupported/Eigen/: ArpackSupport  AutoDiff  BVH  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MatrixFunctions  MoreVectorization  NonLinearOptimization  NumericalDiff  Polynomials  Skyline  SparseExtra  SpecialFunctions  Splines
kdtree/lib/eigen3/unsupported/Eigen/CXX11/: Tensor  TensorSymmetry  ThreadPool
kdtree/lib/eigen3/unsupported/Eigen/src/IterativeSolvers/: ConstrainedConjGrad.h  IterationController.h
kdtree/lib/tbb/: CMakeLists.txt
kdtree/src/: Axis.h  AxisScorer.h  AxisSeparation.h  BuildKDTree.cpp  CMakeLists.txt  Dimension.h  DimensionSelector.h  DimensionSplitter.h  EigenMatrixAdapter.cpp  EigenMatrixAdapter.h  KDTree.h  KDTreeBuilder.h  KDTreeExplorer.h  KDTreeHandler.h  KDTreeIO.h  MatrixXdAdapter.cpp  MatrixXdAdapter.h  Node.h  NodeBuilder.h  Point.h  QueryKDTree.cpp  Segment.h  SegmentSplitter.h  SplitDecider.h  SplitGenerator.h  SplitPointSelector.h  Util.cpp  Util.h  exceptions.h
kdtree/tests/: CMakeLists.txt
kdtree/tests/basic_tests/: AxisSeparationTest.cpp  AxisTest.cpp  CMakeLists.txt  DimensionSelectorTest.cpp  DimensionSplitterTest.cpp  DimensionTest.cpp  EigenMatrixAdapterTest.cpp  EndToEndTest.cpp  KDTreeBuilderTest.cpp  KDTreeExplorerTest.cpp  KDTreeHandlerTest.cpp  KDTreeIOTest.cpp  KDTreeTest.cpp  MatrixXdAdapterTest.cpp  MockEigenMatrixAdapter.h  MockTest.cpp  NodeBuilderTest.cpp  NodeTest.cpp  PointTest.cpp  SegmentSplitterTest.cpp  SegmentTest.cpp  SplitDeciderTest.cpp  SplitDimensionSelectorTest.cpp  SplitGeneratorTest.cpp  SplitPointSelectorTest.cpp  UtilTest.cpp  basic_check.cpp
kdtree/tests/basic_tests/data/: dummy_data.csv  dummy_data.nn.csv  dummy_data.queries.csv  generate_data.py  generate_data_and_queries.py  generate_nn.py  sample_data.nn.csv  sample_data_smaller.csv  test_25d.csv  test_25d.nn.csv  test_25d.queries.csv  test_50K.csv  test_50K.nn.csv  test_50K.queries.csv  test_5d.csv  test_5d.nn.csv  test_5d.queries.csv
kdtree/tests/basic_tests/mocks/: CMakeLists.txt
kdtree/tests/lib/googletest/build-aux/: CMakeCache.txt  Makefile  cmake_install.cmake
ubuntu_14_04_setup/: Dockerfile
